--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
-	<title>Hoja de Vida Rafael Leal  X's Homepage</title>
+	<title>Hoja de Vida Rafael Leal </title>
 	<meta name="description" content="Ingeniero X's Homepage, Life University, Bogotá">
 	<meta name="keywords" content="Life University, Bogotá, Systems Engineering">
 	<meta name="author" content="Ingeniero X">
@@ -41,15 +41,15 @@
       <nav>
       <h3 id="logo" style="text-align:center;">
       
-          <img src="images/ingeniero.png" width="300" class="with_border"/>
-		  Ingeniero X
+          <img src="images/foto.png" width="300" class="with_border"/>
+		  Ingeniero Rafael Antonio Leal B. 
 	  </h3>
       
       <hr />
       <ul>
-        <li><a href="#about">About</a></li>
- 	    <li><a href="#life">My Life</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#Acerca de">About</a></li>
+ 	    <li><a href="#Vida">My Life</a></li>
+        <li><a href="#contacto">Contact</a></li>
 	  </ul>
 	  <br />
 	  <hr />
