cambio de datos

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
       
       <hr />
       <ul>
-        <li><a href="#Acerca de">About</a></li>
- 	    <li><a href="#Vida">My Life</a></li>
-        <li><a href="#contacto">Contact</a></li>
+        <li><a href="#About">Acerda de</a></li>
+ 	    <li><a href="#life">Mi Vida</a></li>
+        <li><a href="#contact">Contacto</a></li>
 	  </ul>
 	  <br />
 	  <hr />
